# OpenglProject

./: README.md
OpengEngine/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
OpengEngine/glsl/Camera/: 456.txt
OpengEngine/glsl/Cube/: 123.txt  456.txt
OpengEngine/glsl/LightMap/: 123.vert  456.frag
OpengEngine/glsl/PhongModel/: 123.vert  456.frag  456Ex.frag
OpengEngine/glsl/Rectangle/: 123.txt  456.txt
OpengEngine/src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Widget.cpp  Widget.h
OpengEngine/src/Event/: EventControls.cpp  EventControls.h
OpengEngine/src/Graphics/: CameraControlEngine.cpp  CameraControlEngine.h  ColorCubeEngine.cpp  ColorCubeEngine.h  CubeData.cpp  CubeData.h  Graphics.cpp  Graphics.h  ImGuiWidget.h  LightMapsEngine.cpp  LightMapsEngine.h  PhongModelEngine.cpp  PhongModelEngine.h  RectData.cpp  RectData.h  RectTexture.cpp  RectTexture.h
OpengEngine/src/ImGuiWidget/: CubeImGui.cpp  CubeImGui.h  ImGuiWidget.cpp  ImGuiWidget.h  PhongModelImGui.cpp  PhongModelImGui.h  RectangleImGui.cpp  RectangleImGui.h
OpengEngine/src/Utils/: OpengHearder.h  Utils.cpp  Utils.h
OpenglColorCube/: .gitignore  CMakeLists.txt  main.cpp
OpenglColorCube/glsl/: 123.txt
OpenglColorCube/src/: Shader.h  Widget.cpp  Widget.h
OpenglColorCube/src/Graphics/: ColorCubeEngine.cpp  ColorCubeEngine.h  CubeData.cpp  (+4 more)
OpenglCube/: CMakeLists.txt  main.cpp
OpenglCube/OpenGl/: glad.c
OpenglCube/glsl/: 123.txt
OpenglCube/src/: Shader.cpp
OpenglRectangleTexture/: CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
OpenglRectangleTexture/glsl/: 123.txt  456.txt
OpenglRectangleTexture/src/: Shader.cpp  Shader.h  Widget.cpp  Widget.h
opengl_rectangle/: CMakeLists.txt  main.cpp
opengl_rectangle/OpenGl/glad/lib/: glad.lib
opengl_rectangle/glsl/: 123.txt
opengl_rectangle/src/: Shader.cpp  Shader.h  Widget.cpp  Widget.h
opengl_rectangle/src/Graphics/: Graphics.cpp  Graphics.h  RectData.cpp  RectData.h
opengl_rectangle/src/Utils/: Utils.cpp  Utils.h
(+14 files in other folders)
